--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
-[submodule "submodules/simple-knn"]
-	path = submodules/simple-knn
-	url = https://gitlab.inria.fr/bkerbl/simple-knn.git
 [submodule "submodules/diff-gaussian-rasterization"]
 	path = submodules/diff-gaussian-rasterization
-	url = https://github.com/graphdeco-inria/diff-gaussian-rasterization
-[submodule "SIBR_viewers"]
-	path = SIBR_viewers
-	url = https://gitlab.inria.fr/sibr/sibr_core.git
+	url = https://github.com/graphdeco-inria/diff-gaussian-rasterization.git
+[submodule "submodules/simple-knn"]
+	path = submodules/simple-knn
+	url = https://github.com/camenduru/simple-knn.git
+[submodule "submodules/mpeg-pcc-tmc13"]
+	path = submodules/mpeg-pcc-tmc13
+	url = https://github.com/MPEGGroup/mpeg-pcc-tmc13.git
+[submodule "submodules/nerfstudio"]
+	path = submodules/nerfstudio
+	url = https://github.com/seungjooshin/nerfstudio.git
